feat: разработать раздел лекций